# CoinMisterPro

./: README.md  connect_to_already_opened_browser.py  parse_players_fut_bin_api.py  parse_players_fut_bin_web.py  pyproject.toml  selenium_test.py
futbin/api/: fut_bin_client.py
futbin/models/: fut_bin_raw_player.py
futbin/web/driver/: web_driver_manager.py
futbin/web/pages/: players_page.py
